<resources>
    <string name="back_arrow">Back</string>
    <string name="edit_picture">Edit Picture</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="bio">Bio</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="location">Location</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_log_out">Log out</string>
    <string name="lbl_data_saver">Data Saver</string>
    <string name="msg_report_a_problem">Report a problem</string>
    <string name="lbl_notifications">Notifications</string>
    <string name="lbl_my_subscribtion">My Subscribtion</string>
    <string name="msg_terms_and_policies">Terms and Policies</string>
    <string name="lbl_settings">Settings</string>
    <string name="msg_cache_cellular">Cache &amp; cellular</string>
    <string name="lbl_actions">Actions</string>
    <string name="lbl_support_about">Support &amp; About</string>
    <string name="lbl_help_support">Help &amp; Support</string>
    <string name="lbl_privacy">Privacy</string>
    <string name="lbl_security">Security</string>
    <string name="lbl_free_up_space">Free up space</string>
    <string name="lbl_account">Account</string>
    <string name="lbl_5">5</string>
    <string name="lbl_posts">Posts</string>
    <string name="app_name">frame_8</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_location">Location</string>
    <string name="lbl_philippines">Philippines</string>
    <string name="lbl_date_of_birth">Date of Birth</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_bio">Bio</string>
    <string name="lbl_09_05_03">09/05/03</string>
    <string name="lbl_save_changes">Save changes</string>
    <string name="lbl_edit_profile">Edit Profile</string>
    <string name="msg_open_for_commissions">Open for commissions </string>
    <string name="msg_jessel_rome_b_sajulga">Jessel Rome B. Sajulga</string>
    <string name="msg_sajulgajessel_gmail_com">sajulgajessel@gmail.com</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_likes">Likes</string>
    <string name="msg_active_posts_5_0">Active Posts (5/0)</string>
    <string name="lbl_inactive_posts">Inactive Posts</string>
    <string name="lbl_88">88</string>
    <string name="lbl_upload">Upload</string>
    <string name="lbl_rating">Rating</string>
    <string name="msg_jessel_rome_sajulga">Jessel Rome Sajulga</string>
    <string name="msg_cagayan_de_oro_city">Cagayan de Oro City, Philippines</string>
    <string name="lbl_4_5">4.5</string>
    <string name="lbl_privacy_policy">Privacy Policy</string>
    <string name="msg_1_types_data_we">1. Types data we collect</string>
    <string name ="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="msg_we_collect_personal">We collect personal information like name, email, and phone number, along with usage data such as IP address and browsing activity, to provide personalized experiences and improve our services. Additionally, we may use cookies for tracking user interactions and preferences across our platforms.</string>
    <string name="msg_2_use_of_your_personal">2. Use of your personal data</string>
    <string name="msg_your_information">Your information is crucial for providing and enhancing our services, ensuring effective communication with you, and conducting insightful analytics to improve user experience. We prioritize safeguarding your privacy and utilize your data responsibly and transparently in line with our commitment to your trust.</string>
    <string name="msg_3_disclosure_of">3. Disclosure of your personal data</string>
    <string name="msg_we_prioritize_the">"We prioritize the protection of your data and handle it with utmost care. While we may share data with trusted service providers to support our operations, we ensure that these partners adhere to stringent privacy standards and only use the information for the intended purposes. Moreover, in compliance with legal obligations, we may disclose data when required by law or to respond to valid legal requests, such as subpoenas or court orders. Additionally, in the event of a merger, acquisition, reorganization, or sale of assets, your personal data may be transferred or disclosed as part of the transaction. However, we will notify you via email or a prominent notice on our website of any such change in ownership or control of your personal information, ensuring transparency and accountability. If you have any concerns or inquiries regarding the disclosure of your data, please don't hesitate to contact us at [contact email or address]. Your trust is paramount, and we are committed to maintaining the confidentiality and security of your information."</string>
    <string name="lbl_payment_request">Payment Request</string>
    <string name="lbl_common">Common</string>
    <string name="lbl_vibrate">Vibrate</string>
    <string name="msg_general_notification">General Notification</string>
    <string name="msg_discount_avaiable">Discount Avaiable</string>
    <string name="lbl_bill_reminder">Bill Reminder</string>
    <string name="lbl_others">Others</string>
    <string name="msg_system_services">System &amp; services update</string>
    <string name="lbl_app_updates">App updates</string>
    <string name="msg_new_service_available">New Service Available</string>
    <string name="lbl_promotion">Promotion</string>
    <string name="lbl_off">OFF</string>
    <string name="lbl_sound">Sound</string>
    <string name="msg_new_tips_available">New Tips Available</string>
    <string name="msg_we_re_on_a_mission">"We're on a mission to make renting the new black, by providing seamless comfort with affordable pricing.&#13;
&#13;
With us, you can rent a wide range of well-conditioned vehicles, like, SUVs, MUVs, sedans, vintage cars and chariots at very affordable prices."</string>
    <string name="msg_terms_conditions">Terms &amp; Conditions</string>
</resources>
