<?xml version="1.0" encoding="UTF-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout android:id="@+id/linearColumnarrowLeftOne"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyleblack_900">
        <androidx.appcompat.widget.Toolbar
            android:gravity="center_horizontal"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_53pxv"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:id="@+id/linearRowarrowleft"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_11pxv"
                android:layout_marginEnd="@dimen/_98pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageArrowleftOne"
                    android:layout_gravity="center_vertical"
                    android:layout_height="@dimen/_23pxh"
                    android:layout_marginBottom="@dimen/_5pxv"
                    android:layout_marginTop="@dimen/_4pxv"
                    android:layout_width="@dimen/_24pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrow"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrow"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPrivacypolicy"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_72pxh"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_11pxh"
                    android:singleLine="true"
                    style="@style/txtInterssemibold22" tools:text="@string/lbl_privacy_policy"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <ScrollView android:clipToPadding="false"
            android:fillViewport="true"
            android:gravity="center_horizontal"
            android:id="@+id/scrollViewScrollview"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_weight="1" android:layout_width="match_parent">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearPrivacypolicy"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:paddingEnd="@dimen/_23pxh" android:paddingStart="@dimen/_23pxh">
                <TextView android:ellipsize="end"
                    android:id="@+id/txt1typesdatawe"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:letterSpacing="0.01"
                    android:lineSpacingExtra="@dimen/_8pxh"
                    android:singleLine="true"
                    style="@style/txtIntersemibold16" tools:text="@string/msg_1_types_data_we"/>
                <TextView android:id="@+id/txtDescription"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_6pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_width="match_parent"
                    android:letterSpacing="0.01"
                    style="@style/txtInterregular14" tools:text="@string/msg_we_collect_personal"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txt2useofyour"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_60pxv"
                    android:layout_width="match_parent"
                    android:letterSpacing="0.01"
                    android:lineSpacingExtra="@dimen/_8pxh"
                    android:singleLine="true"
                    style="@style/txtIntersemibold16" tools:text="@string/msg_2_use_of_your_personal"/>
                <TextView android:id="@+id/txtDescription1"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:letterSpacing="0.01"
                    style="@style/txtInterregular14" tools:text="@string/msg_your_information"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txt3disclosureof"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_29pxv"
                    android:layout_width="match_parent"
                    android:letterSpacing="0.01"
                    android:lineSpacingExtra="@dimen/_8pxh"
                    android:singleLine="true"
                    style="@style/txtIntersemibold16" tools:text="@string/msg_3_disclosure_of"/>
                <TextView android:id="@+id/txtDescription2"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:letterSpacing="0.01"
                    style="@style/txtInterregular14" tools:text="@string/msg_we_prioritize_the"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
