<?xml version="1.0" encoding="UTF-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout android:id="@+id/linearFinalProfile"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStyleblack_900">
            <androidx.appcompat.widget.Toolbar
                android:gravity="center_horizontal"
                android:id="@+id/toolbarToolbar"
                android:layout_height="wrap_content"

                android:layout_width="match_parent" app:contentInsetStart="0dp">
                <LinearLayout android:id="@+id/linearColumnjesselrom"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_width="match_parent" android:orientation="vertical">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtJesselrome"
                        android:layout_marginTop="@dimen/_12pxv"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        style="@style/txtIntersemibold24"
                        tools:text="@string/msg_jessel_rome_sajulga"/>
                    <LinearLayout android:gravity="center_vertical"
                        android:id="@+id/linearRowarrowOne"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_17pxv"
                        android:layout_width="match_parent" android:orientation="horizontal">
                        <ImageView android:id="@+id/imageArrowOne"
                            android:layout_gravity="bottom"
                            android:layout_height="@dimen/_25pxh"
                            android:layout_marginTop="@dimen/_3pxv"
                            android:layout_width="@dimen/_22pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_arrow"
                            tools:ignore="ContentDescription"
                            tools:src="@drawable/img_arrow"/>

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btnSettings"
                            android:layout_width="@dimen/_25pxh"
                            android:layout_height="@dimen/_25pxh"
                            android:layout_gravity="bottom"
                            android:layout_marginStart="@dimen/_320pxh"
                            android:background="@drawable/img_icons"
                            android:visibility="visible"
                            tools:ignore="ContentDescription" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>

            <LinearLayout android:id="@+id/linearColumnvector"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/_3pxv"
                android:paddingEnd="@dimen/_15pxh"
                android:paddingStart="@dimen/_15pxh" android:paddingTop="@dimen/_3pxv">
                <FrameLayout android:id="@+id/frameStackvectorOne"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_166pxv" android:layout_width="@dimen/_163pxh">
                    <ImageView
                        android:id="@+id/profile_bg"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/profile_bg"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:id="@+id/imageCircleimage"
                        android:layout_width="@dimen/_150pxh"
                        android:layout_height="145dp"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        tools:ignore="ContentDescription"
                        tools:src="@drawable/img_ellipse_4" />

                </FrameLayout>

                <LinearLayout
                    android:gravity="center"
                    android:id="@+id/linearRowcagayandeoro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_8pxv"
                    app:layout_constraintTop_toBottomOf="@id/linearFinalProfile">

                    <ImageView
                        android:id="@+id/imageImageFour"
                        android:layout_width="@dimen/_27pxh"
                        android:layout_height="@dimen/_27pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_location"
                        android:layout_marginStart="74dp"
                        tools:ignore="ContentDescription"
                        tools:src="@drawable/img_location" />

                    <TextView
                        android:id="@+id/txtCagayandeoro"
                        android:layout_width="@dimen/_101pxh"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_4pxv"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="@dimen/_6pxv"
                        android:ellipsize="end"
                        android:gravity="bottom"
                        android:singleLine="true"
                        style="@style/txtIntermedium13"
                        tools:text="Address" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearRowfive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_9pxv"
                    android:layout_marginStart="74dp"
                    android:layout_marginEnd="72dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/linearRowcagayandeoro">

                    <LinearLayout
                        android:id="@+id/linearColumnfive"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginEnd="51dp"
                        android:gravity="start"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtFive"
                            style="@style/txtIntersemibold24"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_12pxh"
                            android:ellipsize="end"
                            android:singleLine="true"
                            tools:text="@string/lbl_5" />

                        <TextView
                            android:id="@+id/txtPosts"
                            style="@style/txtIntermedium14"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:singleLine="true"
                            tools:text="@string/lbl_posts" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearColumneightyeig"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_marginEnd="51dp"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:gravity="start"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtEightyeight"
                            style="@style/txtIntersemibold24"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/_2pxh"
                            android:ellipsize="end"
                            android:singleLine="true"
                            tools:text="@string/lbl_88" />

                        <TextView
                            android:id="@+id/txtLikes"
                            style="@style/txtIntermedium14"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:singleLine="true"
                            tools:text="@string/lbl_likes" />
                    </LinearLayout>

                    <FrameLayout android:id="@+id/frameStackrating"
                        android:layout_gravity="center_vertical"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_width="@dimen/_51pxh">

                        <TextView android:ellipsize="end"
                            android:gravity="top|start"
                            android:id="@+id/txtFortyFive"
                            android:layout_gravity="top|start"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_3pxh"
                            android:layout_width="match_parent"
                            android:singleLine="true"
                            style="@style/txtIntersemibold24" tools:text="@string/lbl_4_5"/>
                        <LinearLayout android:id="@+id/linearColumnrating"
                            android:layout_gravity="bottom|center"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent" android:orientation="vertical">

                            <ImageView android:id="@+id/imageImageFive"
                                android:layout_gravity="end"
                                android:layout_height="@dimen/_10pxh"
                                android:layout_width="@dimen/_10pxh"
                                android:scaleType="fitXY"
                                android:src="@drawable/img_star_1"
                                tools:ignore="ContentDescription" tools:src="@drawable/img_star_1"/>
                            <TextView android:ellipsize="end"
                                android:id="@+id/txtRating"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_8pxv"
                                android:layout_width="match_parent"
                                android:singleLine="true"
                                style="@style/txtIntermedium14" tools:text="@string/lbl_rating"/>
                        </LinearLayout>
                    </FrameLayout>
                </LinearLayout>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtOpenfor"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_11pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    style="@style/txtIntermedium13" tools:text="@string/msg_open_for_commissions"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/buttonsSection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_19pxv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtOpenfor">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnEditProfile"
                        style="@style/btnGradientRounded2"
                        android:layout_width="@dimen/_100sp"
                        android:layout_height="@dimen/_20pxh"
                        android:layout_marginStart="4dp"
                        android:gravity="center"
                        android:text="@string/lbl_edit_profile"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        tools:text="@string/lbl_edit_profile" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnUpload"
                        style="@style/btnGradientRounded2"
                        android:layout_width="@dimen/_100sp"
                        android:layout_height="@dimen/_20pxh"
                        android:layout_marginStart="16dp"
                        android:gravity="center"
                        android:text="@string/lbl_upload"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/btnEditProfile"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="@string/lbl_upload" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:gravity="center_vertical"
                    android:id="@+id/btnRowactivepostsf"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_19pxh"
                    android:layout_marginStart="@dimen/_15pxh"
                    android:layout_marginTop="@dimen/_22pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:ellipsize="end"
                        android:id="@+id/btnActivepostsfive"
                        android:layout_gravity="bottom"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        style="@style/txtIntersemibold14" tools:text="@string/msg_active_posts_5_0"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnInactiveposts"
                        android:layout_gravity="top"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_92pxh"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        style="@style/txtIntersemibold14" tools:text="@string/lbl_inactive_posts"
                        app:layout_constraintStart_toEndOf="@id/btnActivepostsfive"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>


                <ImageView android:id="@+id/imagePolygonsixOne"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_47pxh"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:layout_width="@dimen/_60pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_polygon_6"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_polygon_6"/>
                <View android:background="@color/gray_400"
                    android:id="@+id/lineLineoneOne"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_1pxv"
                    android:layout_marginEnd="@dimen/_8pxh"
                    android:layout_marginStart="@dimen/_9pxh" android:layout_width="@dimen/_327pxh"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerFinalProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_1pxh"
                    android:layout_marginTop="@dimen/_6pxv"
                    android:gravity="center_horizontal"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="3"
                    tools:itemCount="5"
                    tools:listitem="@layout/active_posts" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>